# Eyos

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  DartConfiguration.tcl  LICENSE  clang-format.txt  readme.md
.github/workflows/: ccpp.yml  ccpp_linux.yml  ccpp_windows.yml  compile_clang_linux.yml  compile_gcc_linux.yml  compile_windows.yml  test_runner_linux.yml  test_runner_windows.yml  tmate.yml
cmake/: EngineSourceList.cmake  GitSubmodule.cmake  SetCppVersionOfTarget.cmake  TargetEngine.cmake  TargetEyos.cmake  findglm.cmake  target_source_local.cmake
cmake/finders/: FindCatch2.cmake  findVLD.cmake  findenet.cmake
cmake/targets/: TargetEngine.cmake  TargetEngineSourceList.cmake  TargetEyos.cmake  TargetEyosSourceList.cmake  TargetLobbyServer.cmake  TargetLobbyServerSourceList.cmake  TargetServer.cmake  TargetServerSourceList.cmake
cmake/utils/: GitSubmodule.cmake  add_eyos_mesh.cmake  add_eyos_shader.cmake  use_vld.cmake
data/shaders/cubes/: vs_cubes.sc
data/shaders/instancing/: fs_instancing.sc  vs_instancing.sc
data/shaders/mesh/: fs_mesh.sc
data/shaders/unlit_textured/: fs_unlit_textured_color.sc  varying.def.sc  vs_unlit_textured_color.sc
include/engine/: AlignedAlloc.h  DebugHelper.h  Defines.h  Defines.hpp  EngineEvents.h  EngineEvents.hpp  ResourceManager.h  ResourceManager.hpp  Terrain.h  Time.h  Time.hpp  World.h  World.hpp  eyos.hpp
include/engine/ecs/: ComponentArray.h  Ecs.h  EcsBuiltinComponents.h  EntityId.h  MTP_Utils.h  System.h  TypedEcs.h
include/engine/geometry/: Ray.h  Rectangle.h
include/engine/nav/: TerrainNav.h
include/engine/net/: Address.h  Address.hpp  Allocator.h  Common.h  Common.hpp  Host.h  Host.hpp  Net.h  Net.hpp  NetEventHandler.h  NetEventHandler.hpp  NetFwd.h  NetFwd.hpp  Packet.h  Packet.hpp  Peer.h  Peer.hpp  Streams.h  Utility.h
include/engine/net/streams/: InputStream.h  OutputStream.h
include/eyos/: Application.h  Application.hpp  ClientEcsType.h  Config.h  DebugRenderer.h  EyosRenderer.h  GameEvents.h  Input.h  UIRenderer.h  VertexLayouts.h
include/eyos/rendering/: Camera.h  Components.h  DebugRenderer.h  EyosRenderer.h  Material.h  RenderableTerrain.h  UIRenderer.h  VertexLayouts.h
include/eyos/ui/: DebugTerrainUI.h
src/: CMakeLists.txt  engine_export.h
src/engine/: Eyos.cpp  Terrain.cpp  Time.cpp  eyos.cpp
src/engine/ecs/: EntityId.cpp  MTP_Utils.cpp
src/engine/nav/: TerrainNav.cpp
src/engine/net/: Address.cpp  Allocator.cpp  Common.cpp  Host.cpp  Net.cpp  NetEventHandler.cpp  Packet.cpp  Peer.cpp
src/engine/net/streams/: InputStream.cpp  OutputStream.cpp
src/eyos/: Application.cpp  ClientEcsType.cpp  DebugRenderer.cpp  EyosRenderer.cpp  Input.cpp  Main.cpp  UIRenderer.cpp  VertexLayouts.cpp  entry.cpp
src/eyos/rendering/: Camera.cpp  DebugRenderer.cpp  EyosRenderer.cpp  RenderableTerrain.cpp  UIRenderer.cpp  VertexLayouts.cpp
src/eyos/ui/: DebugTerrainUI.cpp
src/server/: EyosDedicatedServer.cpp  EyosLobbyServer.cpp
tests/: CMakeLists.txt  Tests  Tests_include-b858cb2.cmake  Tests_tests-b858cb2.cmake  my_test.cpp  packet_tests.cpp  stream_tests.cpp
tools/: geometryc  texturec
